Dependencies no longer require deprecated java.xml.bind module.